tranlsted question_model to kg

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1315,5 +1315,110 @@
   "hiv_test_result16": "ВИЧке тесттин жыйынтыгы терс, бирок жалган чыкса...\n\n",
   "hiv_test_result17": "Бул ВИЧке тапшырган тести терс чыгып, бирок чындыгында ВИЧ-инфекциясы бар адамдар. Ошондуктан, эгерде адам кооптуу жыныстык катнашта болсо, ага тестти жылына 1-2 жолу тапшыруу сунушталат. Учурда диагностиканын жогорку сапаттагы ыкмалары гана колдонулат, алар тест жалган жыйынтык көрсөтүшүнө жол бербейт. ВИЧке тестти бейөкмөт уюмдун базасында же өз алдынча жасаганда, материалды (шилекейди) туура эмес алганда жыйынтык туура эмес чыгып калышы мүмкүн.",
   "test_what_is_hiv" : "ВИЧ деген эмне (бир туура жоопту белгиле)",
-  "test_hiv_answer1" : "ВИЧ — адамдын иммундук жетишсиздигинин вирусу"
+  "test_hiv_answer1" : "ВИЧ — адамдын иммундук жетишсиздигинин вирусу",
+
+  "answer0": "Билбейм",
+  "test_hiv_question0" : "ВИЧ деген эмне (бир туура жоопту белгиле)",
+  "test_hiv_0answer1" : "ВИЧ — адамдын иммундук жетишсиздигинин вирусу",
+  "test_hiv_0answer2" :"ВИЧ - ВИЧ инфекциясынын акыркы этабы",
+  "test_hiv_0answer3" :"ВИЧ – адамдын иммундук жетишсиздигинин вирусунан келип чыккан оору.",
+  "test_hiv_0answer4" :"Жогоруда айтылгандардын баары",
+
+  "test_hiv_question1" :"СПИД деген эмне (бир туура жоопту белгиле)?",
+  "test_hiv_1answer1" :"Бул иммундук система катуу жабыркаганда пайда болгон ВИЧ инфекциясынын акыркы этабы.",
+  "test_hiv_1answer2" :"Бул адамдын иммундук жетишсиздик вирусунан келип чыккан оору.",
+  "test_hiv_1answer3" :"Бул вирус козгогон жугуштуу оору",
+  "test_hiv_1answer4" :"Жогоруда айтылгандардын баары",
+
+  "test_hiv_question2" :"ВИЧтин жугуу жолдорун белгилеңиз? (Тийиштүүлөрдүн баарын белгилеңиз)",
+  "test_hiv_2answer1" :"ВИЧ кан аркылуу жугат",
+  "test_hiv_2answer2" :"ВИЧ чиркей чакканда жугат",
+  "test_hiv_2answer3" :"ВИЧ инфекциясы бар энеден балага жугат",
+  "test_hiv_2answer4" :"ВИЧ жыныстык катнаш аркылуу жугат",
+  "test_hiv_2answer5" :"ВИЧ шприц аркылуу баңгизаттарды колдонгондо жугат",
+  "test_hiv_2answer6" :"ВИЧ тамак-аш аркылуу жугат",
+  "test_hiv_2answer7" :"Жогоруда айтылгандардын баары",
+
+  "test_hiv_question3" :"ВИЧтин жыныстык жактан жугуу коркунучун кантип азайтууга болот (Тийиштүүлөрдүн баарын текшериңиз)",
+  "test_hiv_3answer1" :"Эгер жыныстык катнаш жок болсо",
+  "test_hiv_3answer2" :"Жыныстык катнаштын алдында жакшылап жуунсаңыз",
+  "test_hiv_3answer3" :"Эгерде сиз бир жугуштуу эмес өнөктөш менен жыныстык катнашта болсоңуз",
+  "test_hiv_3answer4" :"Эгерде сиз презервативди дайыма жана туура колдонсоңуз",
+  "test_hiv_3answer5" :"Жогоруда айтылгандардын баары",
+
+  "test_hiv_question4" :"ВИЧ-инфекциясынын жугушун алдын алуу боюнча чаралар (бардык тиешелүү вариянттарды текшериңиз)",
+  "test_hiv_4answer1" :"Ар дайым презерватив колдонуңуз",
+  "test_hiv_4answer2" :"Медициналык манипуляцияларды жүргүзүүдө стерилдүү аспаптарды гана колдонуңуз.",
+  "test_hiv_4answer3" :"Кан соргуч курт-кумурскалар (чиркейлер жана башкалар) менен күрөшүү.",
+  "test_hiv_4answer4" :"ВИЧтин жугуу коркунучун азайтуу үчүн ART кабыл алуу",
+  "test_hiv_4answer5" :"ВИЧ-позитивдүү кош бойлуу аялдар үчүн ВИЧтин балага жугуу коркунучун азайтуу үчүн АРТны баштоо",
+
+  "test_hiv_question5" :"Жыныстык жол менен жугуучу инфекциялардын (ЖЖБИ) кандай көрүнүштөрүн билесиз (Тийиштүүлөрдүн баарын текшериңиз)",
+  "test_hiv_5answer1" :"Жыныстык органдардын кычышуусу",
+  "test_hiv_5answer2" :"Жыныстык органдардан башкача агындылардын чыгышы",
+  "test_hiv_5answer3" :"Жыныстык органдардагы жаралар",
+  "test_hiv_5answer4" :"Жогоруда айтылгандардын бири да эмес",
+
+  "test_hiv_question6" :"ЖЖБИ менен кантип күрөшүү керек (Тиректүүлөрдүн бардыгын текшериңиз)",
+  "test_hiv_6answer1" :"Сүйлөшкөн кызым/досуң менен кеңешип, аларда мындай көрүнүштөр болгондо ага кандай мамиле жасалганын билүү зарыл.",
+  "test_hiv_6answer2" :"Аптекага барып, кандай дарыларды ичүү керектигин сураш керек",
+  "test_hiv_6answer3" :"Дарыгер менен кеңешип, бардык рецепттерди аткаруу керек",
+  "test_hiv_6answer4" :"Жыныстык өнөктөшүңүзгө айтуунун кереги жок, антпесе ал сиз жөнүндө жаман ойлойт",
+  "test_hiv_6answer5" :"Күтүү керек, балким баары өзүнөн өзү өтүп кетет",
+  "test_hiv_6answer6" :"Сиз жыныстык өнөктөшүңүзгө көйгөйлөрүңүз жөнүндө айтып, чогуу дарылануу керек",
+  "test_hiv_6answer7" :"Дарылоо учурунда жыныстык катнаштан баш тартуу керек",
+
+  "test_hiv_question7" :"ART денеде кандай таасирин тийгизет (Тийиштүүлөрдүн баарын текшериңиз)",
+  "test_hiv_7answer1" :"ВИЧ инфекциясын айыктырат",
+  "test_hiv_7answer2" :"Кандагы вирустун санын азайтат (вирустук жүктү азайтат)",
+  "test_hiv_7answer3" :"Гепатиттин алдын алууга жардам берет",
+  "test_hiv_7answer4" :"Жалпы ден соолукту жакшыртат",
+  "test_hiv_7answer5" :"Жыныстык катнаш аркылуу ВИЧтин жугуу коркунучун азайтат",
+  "test_hiv_7answer6" :"Сифилис инфекциясынан сактайт",
+  "test_hiv_7answer7" :"Жогоруда айтылгандардын баары",
+
+  "test_hiv_question8" :"ART кантип кабыл алынат (Бир туура жоопту текшериңиз)",
+  "test_hiv_8answer1" :"Сиз каалаган ынгайлуу убакта дарыгердин көрсөтмөсү боюнча ART ала аласыз",
+  "test_hiv_8answer2" :"Эгерде мен дозасын өткөрүп жиберсем, кийинки жолу бир таблетканын ордуна 2 таблетка ичем.",
+  "test_hiv_8answer3" :"Ден соолугум жакшырып кетсе, таблеткаларды ичпей калышым мүмкүн.",
+  "test_hiv_8answer4" :"Дарыгер белгилеген дарыларды (АРТ) белгиленген убакта катуу кабыл алуу зарыл",
+  "test_hiv_8answer5" :"Таблеткаларым түгөнүп калса, досторумдан сурайм.",
+  "test_hiv_8answer6" :"Жогоруда айтылгандардын баары",
+  "test_hiv_8answer7" :"Жогоруда айтылгандардын бири да эмес",
+
+  "test_hiv_question9" :"Оппортунисттик оорулар же инфекциялар (Бир туура жоопту белгилеңиз)",
+  "test_hiv_9answer1" :"COVID менен өнүгөт",
+  "test_hiv_9answer2" :"Иммунитети начар адамдарда гана өнүгүп кетет",
+  "test_hiv_9answer3" :"Профессионалдуу спорт менен машыккан адамдарда өнүгөт",
+
+  "test_hiv_question10" :"ВИЧ-инфекциясы бар адам башкалар үчүн коркунучтуу, ошондуктан ар бир адам өзүнүн ВИЧ-статусу жөнүндө билиши керек (Бир туура жоопту белгиле)",
+  "test_hiv_10answer1" :"Ооба",
+  "test_hiv_10answer2" :"Жок",
+  "test_hiv_10answer3" :"Балким",
+
+  "test_hiv_question11" :"ВИЧтин айынан кандай укуктары чектелиши мүмкүн (Тийиштүүлөрдүн бардыгын караңыз)",
+  "test_hiv_11answer1" :"Жумушка укугу",
+  "test_hiv_11answer2" :"Үй-бүлө куруу укугу",
+  "test_hiv_11answer3" :"Балалуу болуу укугу",
+  "test_hiv_11answer4" :"Кан, сперма, бөйрөктөрдү берүү укугу",
+  "test_hiv_11answer5" :"Өкмөт тарабынан белгиленген айрым медициналык адистиктер боюнча иштөө укугу",
+  "test_hiv_11answer6" :"Ысык-Көлдө эс алуу укугу",
+
+  "test_hiv_question12" :"Сиздин ВИЧ статусуңузду жакындарыңызга айтуунун кандай оң жактары бар? (Тийиштүүлөрдүн баарын белгилеңиз)",
+  "test_hiv_12answer1" :"Алар сага жардам беришет жана колдошот.",
+  "test_hiv_12answer2" :"Алар сени менен сүйлөшпөй калышат.",
+  "test_hiv_12answer3" :"Алар сизге статусту кабыл алуу менен күрөшүүгө жана ART'ка өтүүгө жардам берет.",
+  "test_hiv_12answer4" :"Жубайыңыз жыныстык катнашты улантуу жана алардын коопсуздугу боюнча өз алдынча чечим чыгара алат",
+  "test_hiv_12answer5" :"Сиз дени сак баланын төрөлүшүн пландай аласыз",
+  "test_hiv_12answer6" :"Алар сени менен бир дасторкондон тамактанышпайт.",
+
+  "test_hiv_question13" :"Эгерде сиздин балаңыз ВИЧке чалдыкса (бир туура жоопту белгилеңиз)",
+  "test_hiv_13answer1" :"Аны үйдөгү жардамдан коргоо керек - ал ооруп жатат",
+  "test_hiv_13answer2" :"Ал мектепке бара албайт",
+  "test_hiv_13answer3" :"Ал башка балдар менен дос болуунун кереги жок",
+  "test_hiv_13answer4" :"Ал АРТны алуунун кереги жок – бул анын ден соолугуна зыян",
+  "test_hiv_13answer5" :"ВИЧке чалдыккан баланы тарбиялоо жана окутуу дени сак баладан эч кандай айырмасы жок, болгону ал АРТти ар дайым жана туура кабыл алышы керек\""
+
+
+
 }
