--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1314,7 +1314,108 @@
   "hiv_test_result15": "Это лица с положительными результатами теста на ВИЧ, но у которых ВИЧ-инфекция на самом деле отсутствует. Для этого специалисты подтверждают положительный результат несколькими разными методами, а иногда рекомендуют пройти тестирование на ВИЧ повторно (через 21 день).\n\n",
   "hiv_test_result16": "Ложноотрицательный результат теста на ВИЧ\n\n",
   "hiv_test_result17": "Это лица с отрицательными результатами теста на ВИЧ, но у которых ВИЧ инфекция на самом деле присутствует. Поэтому, если человек практикует опасное поведение, ему рекомендуется проходить тестирование на ВИЧ 1-2 раза в год. В настоящее время применяются только высококачественные методы диагностики, которые позволяют исключить ложные результаты теста. При проведении экспресс-тестирования на ВИЧ по слюне на базе НПО или при самотестировании на ВИЧ, ложноотрицательные результаты могут быть при неправильном заборе материала (слюны).",
-  "test_what_is_hiv" : "Что такое  ВИЧ (отметьте один правильный ответ)",
-  "test_hiv_answer1" : "ВИЧ – это вирус иммунодефицита человека"
+
+  "answer0": "Не знаю",
+  "test_hiv_question0" : "Что такое  ВИЧ (отметьте один правильный ответ)",
+  "test_hiv_0answer1" : "ВИЧ – это вирус иммунодефицита человека",
+  "test_hiv_0answer2" :"ВИЧ – это конечная стадия ВИЧ-инфекции",
+  "test_hiv_0answer3" :"ВИЧ – это заболевание, вызванное вирусом иммунодефицита человека",
+  "test_hiv_0answer4" :"Все перечисленное",
+
+  "test_hiv_question1" :"Что такое СПИД (отметьте один правильный ответ)?",
+  "test_hiv_1answer1" :"Это конечная стадия ВИЧ-инфекции, которая наступает при тяжелом поражении иммунной системы",
+  "test_hiv_1answer2" :"Это заболевание, вызванное вирусом иммунодефицита человека",
+  "test_hiv_1answer3" :"Это инфекционное заболевание, вызванное вирусом",
+  "test_hiv_1answer4" :"Все перечисленное",
+
+  "test_hiv_question2" :"Какие Вы знаете  пути передачи ВИЧ (Отметьте все возможные варианты)",
+  "test_hiv_2answer1" :"ВИЧ передается через кровь",
+  "test_hiv_2answer2" :"ВИЧ передается при укусе комара",
+  "test_hiv_2answer3" :"ВИЧ передается от инфицированной матери ребенку",
+  "test_hiv_2answer4" :"ВИЧ передается при половом контакте",
+  "test_hiv_2answer5" :"ВИЧ передается при совместном потреблении наркотиков через шприц",
+  "test_hiv_2answer6" :"ВИЧ передается через пищу",
+  "test_hiv_2answer7" :"Все перечисленное",
+
+  "test_hiv_question3" :"Как можно снизить риск передачи ВИЧ половым путем (Отметьте все возможные варианты)",
+  "test_hiv_3answer1" :"Если не вступать в половые контакты",
+  "test_hiv_3answer2" :"Если хорошо помыться перед сексом",
+  "test_hiv_3answer3" :"Если иметь половые контакты с одним неинфицированным партнером",
+  "test_hiv_3answer4" :"Если всегда и правильно использовать презерватив",
+  "test_hiv_3answer5" :"Все перечисленное",
+
+  "test_hiv_question4" :"Меры профилактики передачи ВИЧ  (Отметьте все возможные варианты)",
+  "test_hiv_4answer1" :"Всегда использовать презерватив",
+  "test_hiv_4answer2" :"При проведении медицинских манипуляций использовать только стерильные инструменты",
+  "test_hiv_4answer3" :"Бороться с кровососущими насекомыми (комары, москиты и др.)",
+  "test_hiv_4answer4" :"Прием АРТ для снижения риска передачи ВИЧ",
+  "test_hiv_4answer5" :"Назначение АРТ беременным ВИЧ-позитивным женщинам для снижения риска передачи ВИЧ ребенку",
+
+  "test_hiv_question5" :"Какие проявления инфекций, передаваемых половым путем (ИППП), Вы знаете (Отметьте все возможные варианты)",
+  "test_hiv_5answer1" :"Зуд в области половых органов",
+  "test_hiv_5answer2" :"Необычные выделения из половых органов",
+  "test_hiv_5answer3" :"Язвы на половых органах",
+  "test_hiv_5answer4" :"Ничего из вышеперечисленного",
+
+  "test_hiv_question6" :"Как следует действовать при ИППП (Отметьте все возможные варианты)",
+  "test_hiv_6answer1" :"Нужно посоветоваться с подругой /другом и узнать, как он/она лечились, когда у них были такие проявления",
+  "test_hiv_6answer2" :"Нужно сходить в аптеку и спросить, какие лекарства следует принимать",
+  "test_hiv_6answer3" :"Следует обратиться к врачу и выполнить все назначения",
+  "test_hiv_6answer4" :"Не нужно говорить своему половому партнеру / партнерше, а то он/она будут плохо думать о Вас",
+  "test_hiv_6answer5" :"Нужно подождать, возможно, все само пройдет",
+  "test_hiv_6answer6" :"Нужно сообщить своему половому партнеру / партнерше о своих проблемах и совместно пройти лечение",
+  "test_hiv_6answer7" :"Следует воздержаться от половых контактов во время лечения",
+
+  "test_hiv_question7" :"Как действует АРТ на организм (Отметьте все возможные варианты)",
+  "test_hiv_7answer1" :"Излечивает от ВИЧ-инфекции",
+  "test_hiv_7answer2" :"Снижает количества вируса в крови (снижает вирусную нагрузку)",
+  "test_hiv_7answer3" :"Позволяет предотвратить заражение гепатитом",
+  "test_hiv_7answer4" :"Улучшает общее состояние здоровья",
+  "test_hiv_7answer5" :"Снижает риск передачи ВИЧ при половом контакте",
+  "test_hiv_7answer6" :"Защищает от заражения сифилисом",
+  "test_hiv_7answer7" :"Все вышеперечисленное",
+
+  "test_hiv_question8" :"Как следует принимать АРТ (Отметьте один правильный ответ)",
+  "test_hiv_8answer1" :"Можно принимать АРТ по назначению врача в любое удобное время",
+  "test_hiv_8answer2" :"Если я пропущу прием препаратов, то я выпью в следующий раз 2 таблетки вместо одной",
+  "test_hiv_8answer3" :"Если мое состояние здоровья улучшится я могу прекратить прием таблеток",
+  "test_hiv_8answer4" :"Нужно принимать лекарство (АРТ) по назначению врача строго в назначенное время",
+  "test_hiv_8answer5" :"Если у меня закончатся таблетки, я попрошу их у своих друзей",
+  "test_hiv_8answer6" :"Все вышеперечисленное",
+  "test_hiv_8answer7" :"Ничего из вышеперечисленного",
+
+  "test_hiv_question9" :"Оппортунистические заболевания или инфекции (Отметьте один правильный ответ)",
+  "test_hiv_9answer1" :"Развиваются при КОВИД",
+  "test_hiv_9answer2" :"Развиваться только у людей с пониженным иммунитетом",
+  "test_hiv_9answer3" :"Развиваются у людей, которые занимаются профессиональным спортом",
+
+  "test_hiv_question10" :"Человек с ВИЧ опасен для окружающих, поэтому все должны знать о его ВИЧ статусе (Отметьте один правильный ответ)",
+  "test_hiv_10answer1" :"Да",
+  "test_hiv_10answer2" :"Нет",
+  "test_hiv_10answer3" :"Может быть",
+
+  "test_hiv_question11" :"Какие права ЛЖВ могут быть ограничены в связи с ВИЧ (Отметьте все возможные варианты)",
+  "test_hiv_11answer1" :"Право на труд",
+  "test_hiv_11answer2" :"Право создавать семью",
+  "test_hiv_11answer3" :"Право иметь детей",
+  "test_hiv_11answer4" :"Право быть донором крови, спермы, почки",
+  "test_hiv_11answer5" :"Право на работу по некоторым медицинским специальностям, установленным Правительством",
+  "test_hiv_11answer6" :"Право на отдых на Иссык-Куле",
+
+  "test_hiv_question12" :"Каковы позитивные моменты раскрытия Вашего ВИЧ статуса близким людям (Отметьте все возможные варианты)",
+  "test_hiv_12answer1" :"Они окажут Вам помощь и поддержку",
+  "test_hiv_12answer2" :"Они перестанут с Вами общаться",
+  "test_hiv_12answer3" :"Они помогут Вам справиться с принятием статуса и наладить прием АРТ",
+  "test_hiv_12answer4" :"Ваши супруг/супруга смогут сами принять решение о продолжении сексуальных отношений и о их безопасности",
+  "test_hiv_12answer5" :"Вы сможете планировать рождение здорового ребенка",
+  "test_hiv_12answer6" :"Они не будут с Вами обедать за одним столом",
+
+  "test_hiv_question13" :"Если у Вашего ребенка ВИЧ (Отметьте один правильный ответ)",
+  "test_hiv_13answer1" :"Надо оградить его от помощи по дому – он же больной",
+  "test_hiv_13answer2" :"Ему нельзя посещать школу",
+  "test_hiv_13answer3" :"Ему не нужно дружить с другими детьми",
+  "test_hiv_13answer4" :"Ему не нужно принимать АРТ – это вредно для его здоровья",
+  "test_hiv_13answer5" :"Воспитание и образование ребенка с ВИЧ не отличается от здорового ребенка, только он должен всегда и правильно принимать АРТ\""
+
 }
 
