--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -281,7 +281,7 @@
   "c1_text3": "Следует успокоиться и получить больше информации о ВИЧ-инфекции, которую Вы найдете в этом приложении. Вы можете почитать или прослушать запись книги «Позитивная жизнь». Вы также получите нужную информацию у врача.",
   "c1_text4": "В этом приложении Вы найдете адреса НПО или групп поддержки людей, которые живут с ВИЧ (их называют люди, живущие с ВИЧ – сокращенно ЛЖВ). Они могут дать Вам информацию о ВИЧ и оказать помощь на этапе принятия статуса и начала лечения. О группах поддержки Вы сможете также узнать у Вашего врача.",
   "c1_text5": "Вам нужно будет сообщить о своем статусе своим половым партнерам и принять меры, чтобы не передать им ВИЧ.",
-  "c1_text6": "Маалыматтар менен бөлүшүп, колдоо табуу үчүн сиз ишеним арткан адамдарды аныктап алышыңыз керек.",
+  "c1_text6": "Нужно определить людей, которым Вы доверяете, чтобы поделиться с ними информацией и получить поддержку",
   "c1_text7": "Вы можете еще не чувствовать проявлений ВИЧ-инфекции, но ВИЧ находится в организме и медленно уничтожает клетки иммунной (защитной) системы. Поэтому нужно как можно скорее начать лечение, чтобы защитить себя от ВИЧ. ",
   "c1_text8": "Встаньте на учет в Центре СПИД или другой медицинской организации (ЦСМ, ГСВ); пройдите необходимое обследование и начните лечение ВИЧ-инфекции. ",
   "c1_text9": "Чем раньше Вы начнете лечение, тем меньший вред ВИЧ окажет Вашему здоровью. ",
@@ -892,7 +892,7 @@
   "c6_11text7":"опасна не только тем, что вызывает у человека чувство стыда, вины и изоляции, но и потому, что вызывает бездействие или действия со стороны других людей, которые могут нанести вред людям, или привести к ущемлению их прав. Такие действия являются ",
   "c6_11text8":"дискриминацией.",
   "c6_11text85":"",
-  "c6_11text9":"\\n\\nПричины стигмы",
+  "c6_11text9":"\n\nПричины стигмы",
   "c6_11text10":"Стигма, основана на страхе людей перед последствиями ВИЧ-инфекции из-за мифа о смертельности этого заболевания",
   "c6_11text11":"Незнание и непонимание путей передачи ВИЧ.",
 
