--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -214,8 +214,8 @@
   "hiv_infection_treatment": "ВИЧ-инфекциясын дарылоо",
   "hiv_drugs": "ВИЧке каршы дары-дармектер",
   "treatment_adherence": "Дарылоону сактоо",
-  "impact_ART": "Искусствонун ден-соолукка таасири",
-  "impact_persons_life": "Искусствонун адамдын жашоосуна тийгизген таасири",
+  "impact_ART": "АРТ ден-соолукка таасири",
+  "impact_persons_life": "АРТ адамдын жашоосуна тийгизген таасири",
   "actions_when_you_have_hiv": "Эгерде сизде ВИЧ бар болсо, эмне кылуу керек",
   "my_state": "Менин абалым",
   "taking_medication": "Дары ичүү",
