translated result page test page

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1417,8 +1417,58 @@
   "test_hiv_13answer2" :"Ал мектепке бара албайт",
   "test_hiv_13answer3" :"Ал башка балдар менен дос болуунун кереги жок",
   "test_hiv_13answer4" :"Ал АРТны алуунун кереги жок – бул анын ден соолугуна зыян",
-  "test_hiv_13answer5" :"ВИЧке чалдыккан баланы тарбиялоо жана окутуу дени сак баладан эч кандай айырмасы жок, болгону ал АРТти ар дайым жана туура кабыл алышы керек\""
+  "test_hiv_13answer5" :"ВИЧке чалдыккан баланы тарбиялоо жана окутуу дени сак баладан эч кандай айырмасы жок, болгону ал АРТти ар дайым жана туура кабыл алышы керек\"",
 
+  "test_page1": "Мен",
+  "test_page2": "Эркек",
+  "test_page3": "Аял",
+  "test_page4": "Трансгендер эркек",
+  "test_page5": "Трансгендер аял",
+  "test_page6": "Секс",
+  "test_page7": "Кан",
+  "test_page8": "Симптомдор",
+  "test_page_questions1": "Сиз качандыр бир жыныстык катнашта болдуңуз беле?",
+  "test_page_questions2": "Акыркы жылдагы сексуалдык өнөктөштөрдүн саны?",
+  "test_page_questions3": "Мен акча үчүн секс кылам",
+  "test_page_questions4": "Менин өнөктөшүм ARTны үзгүлтүксүз кабыл алууда",
+  "test_page_questions5": "Менин сексуалдык өнөктөшүм ВИЧ-позитивдүү",
+  "test_page_questions6": "Сексти кызыктуу кылуу үчүн стимуляторлорду же башка заттарды колдоном.",
+  "test_page_questions7": "Мен аналдык секс да жасайм",
+  "test_page_questions8": "Менин сексуалдык өнөктөшүмдүн(өнөктөштөрүмдүн) башка өнөктөштөрү бар",
+  "test_page_questions9": "Мен шеригимден презервативди колдонууну талап кылам",
+  "test_page_questions10": "Менин өнөктөшүм да акча  үчүн жыныстык катнашта болушат",
+  "test_page_questions11": "Мен зордук-зомбулукка кабылдым",
+  "test_page_questions12": "Кандайдыр бир операция же кан куюу болгонбу?",
+  "test_page_questions13": "Мен шприц аркылуу заттрады(наркотикалык) колдончумун",
+  "test_page_questions14": "Мен ийнени же шприцти башка адам/адамдар менен бөлүшүп колдонгонмун",
+  "test_page_questions15": "Жыныс органдарымда жагымсыз жыт менен исиркектер же агындылар бар",
+  "test_page_questions16": "Менде бир айдан ашык лимфа бездери шишип кеткен учурлар болгон",
+  "test_page_questions17": "Менде гепатит жана/же кургак учук бар",
+  "test_page_questions18": "Мен акыркы жолу ВИЧке тесттен качан өттүм?",
 
+  "test_page_answer1": "Ооба",
+  "test_page_answer2": "Жок",
+  "test_page_answer3": "Билбейм",
+  "test_page_answer4": "Дайыма",
+  "test_page_answer5": "Кээде",
+  "test_page_answer6": "Эч качан",
+  "test_page_answer7": "Болуп турат",
+  "test_page_answer8": "Дайыма эмес",
+  "test_page_answer9": "Маанисиз",
+  "test_page_answer10": "Бир ",
+  "test_page_answer11": "Бирден көп",
+  "test_page_answer12": "Көп",
+  "test_page_answer13": "Эстей албайм",
+  "test_page_answer14": "Бир-эки жолу аракет кылдым",
+  "test_page_answer15": "Мен азыр колдоном",
+  "test_page_answer16": "Мурда ооба, азыр жок",
+  "test_page_answer17": "Эч качан колдонгон эмесмин",
+  "test_page_answer18": "6 айдан ашык убакыт мурун",
+  "test_page_answer19": "6 айга жетпеген убакыт мурун",
 
+  "test_warning": "Көңүл буруңуз",
+  "plhiv_result_info1": "Тилекке каршы сиз сынактан өткөн жоксуз.",
+  "plhiv_result_info2": "Сиз сынактан ийгиликтүү өттүңүз",
+  "plhiv_result_info3": "Туура жооптордун пайызы",
+  "plhiv_result_info4": "Башкы бет"
 }
