--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1415,7 +1415,62 @@
   "test_hiv_13answer2" :"Ему нельзя посещать школу",
   "test_hiv_13answer3" :"Ему не нужно дружить с другими детьми",
   "test_hiv_13answer4" :"Ему не нужно принимать АРТ – это вредно для его здоровья",
-  "test_hiv_13answer5" :"Воспитание и образование ребенка с ВИЧ не отличается от здорового ребенка, только он должен всегда и правильно принимать АРТ\""
+  "test_hiv_13answer5" :"Воспитание и образование ребенка с ВИЧ не отличается от здорового ребенка, только он должен всегда и правильно принимать АРТ\"",
+
+
+  "test_page1": "Я",
+  "test_page2": "Мужчина",
+  "test_page3": "Женщина",
+  "test_page4": "Трансгендерный мужчина",
+  "test_page5": "Трансгендерная женщина",
+  "test_page6": "Секс",
+  "test_page7": "Кровь",
+  "test_page8": "Симптомы",
+  "test_page_questions1": "Были-ли у тебя когда либо сексуальные отношения?",
+  "test_page_questions2": "Количество партнеров в сексе за последний год",
+  "test_page_questions3": "Я занимаюсь с сексом за вознаграждение",
+  "test_page_questions4": "Мой партнер регулярно принимает АРТ(терапию, сдерживающую ВИЧ)",
+  "test_page_questions5": "Мой половой партнер ВИЧ положительный",
+  "test_page_questions6": "Я использую стимуляторы или другие вещества, чтобы сделать секс интересней и ярче",
+  "test_page_questions7": "Я практикую анальный секс",
+  "test_page_questions8": "У моего полового партнера (партнеров) бывают другие партнеры",
+  "test_page_questions9": "Я использую/требую от партнера использовать презерватив",
+  "test_page_questions10": "Мой партнер (партнеры) занимаются сексом за вознаграждение",
+  "test_page_questions11": "У меня были случаи секса с применением насилия",
+  "test_page_questions12": "Были -ли хирургические вмешательства  или переливание крови",
+  "test_page_questions13": "Я употреблял наркотики через шприц",
+  "test_page_questions14": "Бывало, что я пользовался(лась) одной иглой или шприцем с другим человеком/людьми",
+  "test_page_questions15": "У меня бывают высыпания или выделения с неприятным запахом на половых органах",
+  "test_page_questions16": "У меня бывает увеличение лимфатических узлов, длящееся более месяца",
+  "test_page_questions17": "Я болею гепатитом и/или туберкулезом",
+  "test_page_questions18": "В последний раз  я проверялся(-лась) на ВИЧ",
+
+  "test_page_answer1": "Да",
+  "test_page_answer2": "Нет",
+  "test_page_answer3": "Не знаю",
+  "test_page_answer4": "Всегда",
+  "test_page_answer5": "Иногда",
+  "test_page_answer6": "Никогда",
+  "test_page_answer7": "Бывает",
+  "test_page_answer8": "Не всегда",
+  "test_page_answer9": "Не важно",
+  "test_page_answer10": "Один",
+  "test_page_answer11": "Больше одного",
+  "test_page_answer12": "Много",
+  "test_page_answer13": "Не помню",
+  "test_page_answer14": "Пробовал один-два раза",
+  "test_page_answer15": "Употребляю и сейчас",
+  "test_page_answer16": "Раньше да, сейчас нет",
+  "test_page_answer17": "не употреблял никогда",
+  "test_page_answer18": "Больше 6 месяцев назад",
+  "test_page_answer19": "Меньше 6 месяцев назад",
+
+  "test_warning": "Внимание",
+  "test_info_page": "",
+  "plhiv_result_info1": "Вы к сожалению не прошли тест",
+  "plhiv_result_info2": "Вы успешно прошли тест",
+  "plhiv_result_info3": "Процент правильных ответов",
+  "plhiv_result_info4": "Домой"
 
 }
 
