small fixes and local

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -190,10 +190,10 @@
   "lastYear": "1 жылга",
   "organization_types": "Мекемелердин түрлөрү",
   "search": "Издөө",
-  "minimal_risk": "Риск минимальный, но он все таки есть. \nМы рекомендуем Вам пройти тестирование на ВИЧ в любом удобном для вас пункте.",
-  "norm_risk": "Риск средний. \nЕсть повод задуматься и пройти тестирование на ВИЧ в любом удобном для тебя месте.",
-  "high_risk": "Высокий риск. \nТебе необходимо пройти тестирование на ВИЧ и получить консультацию врача или равного консультанта в любом удобном месте.",
-  "danger_risk": "Очень высокий риск. \nТебе необходимо как можно скорее пройти тестирование на ВИЧ и получить консультацию врача или равного консультанта.",
+  "minimal_risk": "Тобокелдик минималдуу, бирок ал дагы эле бар.\nСизге ыңгайлуу болгон жерде ВИЧке анализ тапшырууну сунуштайбыз.",
+  "norm_risk": "Тобокелдик орточо.\nСизге ыңгайлуу болгон жерде ойлонууга жана ВИЧке анализ тапшырууга негиз бар.",
+  "high_risk": "Жогорку тобокелдик.\nСиз ВИЧке анализ тапшырып, каалаган ыңгайлуу жерде дарыгерден же кеңешчиден кеңеш алышыңыз керек.",
+  "danger_risk": "Өтө жогорку тобокелдик.\nМүмкүн болушунча тезирээк ВИЧке анализ тапшырып, дарыгерден же кеңешчиден кеңеш алуу керек.",
   "what_is_hiv_and_AIDS": "ВИЧ жана СПИД деген эмне",
   "hiv_transmission_routes": "Жугуу жолдору",
   "how_is_HIV_not_transmitted": "ВИЧ кантип жукпайт",
@@ -201,7 +201,7 @@
   "where_can_testing": "ВИЧ-инфекциясын текшерүү үчүн кайсы жерден текшерилет",
   "hiv_self_test": "ВИЧ үчүн өзүн-өзү текшерүү",
   "test_results": "Тесттин натыйжалары",
-  "get_tested": "Пройти тестирование",
+  "get_tested": "Тесттен өтүңүз",
   "result": "Натыйжа",
   "Attention": "Көңүл буруңуз!",
   "how_to_protect_yourself": "ВИЧ инфекциясынан кантип коргонсо болот",
