--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -12,6 +12,7 @@
   "fillThisField": "Талааны толтуруңуз",
   "passwordIsEmptyError": "Сыр сөздү жазыңыз",
   "passwordIsShortError": "Сыр сөз кеминде 5 символдон турушу керек",
+  "pinCodeNotSameError": "Пин-коддор дал келбейт",
   "guest": "Конок",
   "sign_in": "Кирүү",
   "with_registration": "Катталуу",
@@ -35,7 +36,7 @@
   "questionary": "Анкета",
   "intersex": "Интерсекс",
   "birth_year": "Туулган жылы",
-  "successfull_registration_text": "Сиз ийгиликтүү катталдыңыз",
+  "successful_registration_text": "Сиз ийгиликтүү катталдыңыз",
   "pin_code_description": "Эгер сиз пин-кодду койсоңуз, КИРҮҮ учурунда тиркеме аны сурайт. Ошондой эле, аны унутуп койсоңуз, паролду калыбына келтирүүдө дагы бир ырастоо кадамы болот",
   "pin_code": "Пин-код",
   "confirm": "Подтвердить",
@@ -44,7 +45,16 @@
   "no_need_pin_code": "Пин код кереги жок",
   "dont_have_an_account": "Эсебиниз жокбу?",
   "register_now": "КАТТООГО КИРГИЗҮҮ",
+  "register_greeting_title" : "Урматтуу колдонуучу, \nБиздин мобилдик тиркемени орнотконуңуз үчүн рахмат.",
+  "register_definition" : "- Каттоо колдонмонун бардык функцияларын колдонууга мүмкүнчүлүк берет:\nПациенттер мектебинен өтүү, күбөлүк алуу, күндөлүк жүргүзүү, абалын жазуу, түзүү дары эскертүүлөр, жүктөө тесттер жана электрондук медициналык рекорд түзүү.\n- Сиз тиркемени каттоосуз колдоно аласыз, бирок андан кийин анын функционалдуулугу бир топ чектелет.\n- Каттоодо сиз өзүңүздүн чыныгы маалыматыңызды көрсөтө албайсыз, лакап атыңызды же расмий эмес электрондук почтаңызды гана көрсөтүңүз.\nБардык алынган маалыматтар «Жеке маалымат жөнүндө» Кыргыз Республикасынын Мыйзамына ылайык сакталган катуу купуялуу болуп саналат,\nүчүнчү жактар тарабынан берилбейт же иштетилбейт.",
   "email_dot": "Эл. дарек:",
+  "email_to": "Кимге",
+  "email_subject": "Тема",
+  "email_subject_invalid": "Теманы киргизиңиз",
+  "email_body": "'ВИЧ - Пациенттер мектеби' программасын аяктагандыгы тууралуу сертификат",
+  "email_default_subject": "Менин сертификатым",
+  "email_send": "Жөнөтүү",
+  "email_validator_invalid": "электрондук почта дарегиңизди киргизиңиз",
   "password_dot": "Сыр сөз",
   "login": "Логин",
   "fillLogin": "Логиниңизди киргизиңиз",
@@ -229,7 +239,6 @@
   "drug_count": "Даарынын саны",
   "daily": "Күн сайын",
   "specify_time": "Убакытты көрсөтүңүз",
-  "add_notification": "Эстеткич кошуңуз",
   "take_medications": "Дарыларыңызды ичип алыңыз",
   "tablet": "таблетка",
   "tablets": "таблетка",
@@ -237,6 +246,7 @@
   "notification": "Билдирүү",
   "continue_to_read": "Окууну улантуу",
   "my_certificate": "менин күбөлүгүм",
+  "share_certificate": "Сертификат менен бөлүшүү",
   "chapter": "Бөлүм",
   "contact_to_doctor": "Сиз дарыгерге \nкайрылсаңыз болот:",
   "doctor_consultation": "Врачтын консультациясы",
@@ -247,7 +257,6 @@
   "there_are_not_results": "Тест жыйынтыгы жок",
   "delete": "Удалить",
   "all_notifications": "Бардык билдирмелер",
-  "doctor_visit": "Врачтын кароосу",
   "analyzes": "Анализдер",
   "show_instruction": "Көрсөтмөнү Көрүү",
   "there_are_not_notifications": "Активдүү билдирмелер жок",
@@ -267,7 +276,6 @@
   "fingerprint_scan": "Аныктыгын текшерүү үчүн манжа изиңизди сканерлеңиз",
   "fingerprint_auth": "Манжа изинин аныктыгы",
   "pin_code_length": "ПИН-коддун узундугу 4 белгиден ашпашы керек",
-  "next": "Кийинки",
   "pl_hiv_test": "Тест",
   "check_answers" : "Сураныч, бардык мүмкүн болгон варианттарды белгилеңиз",
   "check_answer" : "Сураныч, бир туура жоопту белгилеңиз",
