--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -3,7 +3,6 @@
   "okay": "Хорошо!",
   "Account": "Аккаунт",
   "SignIn" : "Войти",
-  "next": "Дальше",
   "notAuthenticatedError": "Имя пользователя и пароль не совпадают.",
   "wrongPasswordError": "Неправильный пароль",
   "wrongUsernameError": "Неправильный имя пользователя",
@@ -12,6 +11,7 @@
   "fillThisField": "Заполните поле",
   "passwordIsEmptyError": "Заполните пароль",
   "passwordIsShortError": "Пароль должен быть не менее 5 символов",
+  "pinCodeNotSameError": "Пин-коды не совпадают",
   "new_page": "Новая страница",
   "guest": "Гость",
   "sign_in": "АВТОРИЗОВАТЬСЯ",
@@ -34,7 +34,7 @@
   "questionary": "Анкета",
   "intersex": "Интерсекс",
   "birth_year": "Год рождения",
-  "successfull_registration_text": "Вы успешно зарегистрировались",
+  "successful_registration_text": "Вы успешно зарегистрировались",
   "pin_code_description": "В случае установки пин-кода, приложение будет запрашивать его при ВХОДЕ. Также он будет \nслужить еще одним этапом подтверждения при \nвосстановлении пароля, если ВЫ ЕГО ЗАБЫЛИ",
   "pin_code": "Пин-код",
   "confirm_pin_code": "Подтвердите пин-код",
@@ -43,7 +43,16 @@
   "no_need_pin_code": "Пин код не нужен",
   "dont_have_an_account": "Нет аккаунта?",
   "register_now": "ЗАРЕГИСТРИРОВАТЬСЯ",
+  "register_greeting_title" : "Уважаемый пользователь, \nСпасибо, что установили наше мобильное приложение.",
+  "register_definition" : "- Регистрация дает тебе возможность пользоваться всем функционалом приложения: \nпройти Школу пациентов, получить сертификат, вести свой дневник, записывать состояние, устанавливать \nнапоминания о приеме лекарств, загружать анализы и формировать электронную медицинскую карту.\n- Ты можешь пользоваться приложением без регистрации, но тогда его функционал будет значительно ограничен. \n- При регистрации ты можешь не указывать свои реальные данные, а указать только свой НИК или неофициальную электронную почту. \nВсе полученные данные строго конфиденциальны, хранятся в соответствие с Законом КР «Об информации персонального характера», \nне передаются и не обрабатываются третьими лицами.",
   "email_dot": "Эл. адрес:",
+  "email_to": "Кому",
+  "email_subject": "Тема",
+  "email_subject_invalid": "Введите тему",
+  "email_body": "СЕРТИФИКАТ о Прохождении программы 'ВИЧ - школа пациентов'",
+  "email_default_subject": "Мой сертификат",
+  "email_send": "Отправить",
+  "email_validator_invalid": "Введите адрес электронной почты",
   "password_dot": "Пароль",
   "login": "Логин",
   "forgot_password": "Забыли пароль",
@@ -63,7 +72,6 @@
   "do_you_have_hiv": "Если у тебя ВИЧ",
   "my_condition": "Мое здоровье",
   "AIDS_Center": "Центр СПИД",
-  "doctor_visit": "Посещение врача",
   "info_about_medicine": "Информация о препаратах",
   "what_is_HIV": "Что такое ВИЧ",
   "diary": "Дневник",
@@ -228,7 +236,6 @@
   "drug_count": "Количество таблеток",
   "daily": "Ежедневно",
   "specify_time": "Укажите время",
-  "add_notification": "Добавить напоминание",
   "take_medications": "Примите лекарства",
   "tablet": "таблекта",
   "tablets": "таблетки",
@@ -236,6 +243,7 @@
   "notification": "Напоминание",
   "continue_to_read": "Продолжить чтение",
   "my_certificate": "мой сертификат",
+  "share_certificate": "Поделиться сертификатом",
   "chapter": "Глава",
   "contact_to_doctor": "Вы можете связаться с \nврачом через:",
   "doctor_consultation": "Консультация врача",
@@ -1428,7 +1436,7 @@
   "test_page8": "Симптомы",
   "test_page_questions1": "Были-ли у тебя когда либо сексуальные отношения?",
   "test_page_questions2": "Количество партнеров в сексе за последний год",
-  "test_page_questions3": "Я занимаюсь с сексом за вознаграждение",
+  "test_page_questions3": "Я занимаюсь сексом за вознаграждение",
   "test_page_questions4": "Мой партнер регулярно принимает АРТ(терапию, сдерживающую ВИЧ)",
   "test_page_questions5": "Мой половой партнер ВИЧ положительный",
   "test_page_questions6": "Я использую стимуляторы или другие вещества, чтобы сделать секс интересней и ярче",
