school of patients

--- a/assets/languages/ky-KG.json
+++ b/assets/languages/ky-KG.json
@@ -1050,7 +1050,7 @@
 
   "c8_4text1":"Баланы дарыны өз убагында ичип турууга көндүрүү зарыл, муну менен баланы дарыланууга жоопкерчиликтүү мамиле жасоого тарбиялаш керек.",
   "c8_4text2":"Балага дары ичирип жатканда күч колдонбой, ачууланбай, дары ичкенден баш тартса балага жаза колдонбостон, ага дарынын маанисин түшүндүрүп, ынандырып, тил табышууга аракет кылыңыз. Сабырдуу жана токтоо болуңуз.",
-  "c8_4text3":"ВИЧке чалдыккан балдар 18 жашка чыкканга чейин мамлекеттен 4 000 сом көлөмүндө жөлөк пул алып турушат.",
+  "c8_4text3":"ВИЧке чалдыккан балдар 18 жашка чыкканга чейин мамлекеттен 8000 сом көлөмүндө жөлөк пул алып турушат.",
 
   "c8_5text1":"ВИЧ менен жашаган бала менен баарлашуу жана аны тарбиялоо",
   "c8_5text2":"\nБалдар үчүн ата-эне менен физикалык жана эмоционалдык байланышты сактоо маанилүү (баланы мээрим менен сылап, аны менен жайбаракат сүйлөшүп, кам көрүп, көңүл буруу зарыл). ВИЧке чалдыккан баланы тарбиялоо кадимки баланы тарбиялоодон айырмаланбайт. Балага үй-бүлөнүн ичинде жакшы мамиле, теңтуштар менен баарлашуу керек. ВИЧке чалдыккан балдар башка балдар менен ойноп, билим алып, спорт менен машыгып турушу керек. Бала чарчап, күч-кубатын ашыкча коротуп албасын – ушуга көз салып туруу зарыл.",
@@ -1230,8 +1230,8 @@
   "hiv_prevention3text4":"\nБайланышка чейинки профилактика боюнча сунуштар: \n",
   "hiv_prevention3text5":"БЧП жөнүндө толук маалыматты СПИД борборунан же бейөкмөт уюмдардан алыш керек. БЧПны  алуунун эки жолу бар. \n",
   "hiv_prevention3text6":"БЧПны вирусту жуктуруп алуу ",
-  "hiv_prevention3text7":"тобокелдиги болгон мезгилдин соңуна чейин күн сайын (туруктуу), эч үзгүлтүккө учуратпай ичип туруш керек. Эрежелерди так сактасаңыз анын натыйжасы БЧПны баштагандан кийин 4-7 күндүн ичинде байкалат.\n",
-  "hiv_prevention3text8":"Эгерде кооптуу жыныстык байланыштар сейрек болсо ,",
+  "hiv_prevention3text7":"тобокелдиги болгон мезгилдин соңуна чейин күн сайын (туруктуу), эч үзгүлтүккө учуратпай ичип туруш керек. Күн сайын кабыл алынганда, коргоочу эффект PrEP башталгандан кийин 7 күндүн ичинде ишке ашат.\n",
+  "hiv_prevention3text8":"Эгерде сизде коркунучтуу байланыштар сейрек болсо, атайын PrEP сунушталат, мында дарылардын кош дозасы (2 таблетка) жыныстык катнаштан 2-24 саат мурун, андан кийин эки дозаны кабыл алгандан 24 жана 48 саат өткөндөн кийин бир таблеткадан (2+1+1 режими) кабыл алынат.",
   "hiv_prevention3text9":" кырдаалга жараша БЧПны алуу сунушталат ",
   "hiv_prevention3text10":"дарыларды байланышка чейин 3 күндүн ичинде жана байланыштан кийин 3 күндүн ичинде ичиш керек. Мындай эрежени кооптуу жыныстык катнаш сейрек болгон учурларда сакташ керек.",
   "hiv_prevention3text11":"Эске алчу жагдайлар:",
