--- a/assets/languages/ru-RU.json
+++ b/assets/languages/ru-RU.json
@@ -1049,7 +1049,7 @@
 
   "c8_4text1":"Вовлекать ребенка в процесс приема препаратов, воспитывая у него привычку и ответственность за лечение. ",
   "c8_4text2":"Быть настойчивым и терпеливым в обеспечении приема препаратов ребенком, не используя насилия или наказаний, а только разъяснения и убеждение.",
-  "c8_4text3":"Детям, которые живут с ВИЧ, назначается государственное пособие в размере 4000 сомов до достижения ими возраста 18 лет. ",
+  "c8_4text3":"Детям, которые живут с ВИЧ, назначается государственное пособие в размере 8000 сомов до достижения ими возраста 18 лет. ",
 
   "c8_5text1":"Общение и воспитание ребенка, живущего с ВИЧ",
   "c8_5text2":"\nДетям важен физический и эмоциональный контакт с родителями (ласковое поглаживание и спокойная речь, забота, внимание). Воспитание ребенка с ВИЧ ничем не отличается от воспитания обычного ребенка. Ребенку нужны добрые отношения внутри семьи и общение со сверстниками. Дети, живущие с ВИЧ, должны играть, учиться, заниматься спортом вместе с другими детьми. Необходимо следить за тем, чтобы ребенок не уставал и не переутомлялся. ",
@@ -1230,8 +1230,8 @@
   "hiv_prevention3text4":"\nРекомендации по доконтактной профилактике: \n",
   "hiv_prevention3text5":"Следует получить полную информацию о ДКП в Центре СПИД или в НПО. Существует два способа приема ДКП. \n",
   "hiv_prevention3text6":"Ежедневный (постоянный) прием ДКП ",
-  "hiv_prevention3text7":"нужно осуществлять очень аккуратно, ежедневно в установленное время весь период, когда существует риск. При таком приеме эффект достигается в течение 4-7 дней после начала ДКП.\n",
-  "hiv_prevention3text8":"Если у Вас бывают редкие опасные контакты, рекомендуется ",
+  "hiv_prevention3text7":"нужно осуществлять очень аккуратно, ежедневно в установленное время весь период, когда существует риск. При ежедневном приеме защитный эффект достигается в течение 7 дней после начала ДКП.\n",
+  "hiv_prevention3text8":"«Если у Вас бывают редкие опасные контакты, рекомендуется ситуативный прием ДКП, когда двойную дозу препаратов (2 таблетки) принимают за 2-24 часа до полового контакта, затем по одной таблетке по истечении 24 и 48 часов после приема двойной дозы (схема 2+1+1). ",
   "hiv_prevention3text9":"ситуативный прием ДКП",
   "hiv_prevention3text10":" – когда препараты принимают в течение 3 дней до и 3 дней после контакта. Такой прием рекомендуется при редких ситуациях опасного поведения.",
   "hiv_prevention3text11":"Следует помнить:",
